# workFlow-xun

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  tailwind.config.js
.github/workflows/: release.yml
src/: App.vue
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/workflow/: default.rs  definition.rs  engine.rs  loader.rs  mod.rs
src-tauri/src/workflow_mcp/: mod.rs  server.rs
