[package]
name = "workflow-xun-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "workflow-ui"

[lib]
name = "xun_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
rmcp = { version = "0.1.5", features = ["server", "transport-io"] }
anyhow = "1.0"
dirs = "5.0"
tokio = { version = "1.37", features = ["rt", "rt-multi-thread", "macros"] }
log = "0.4"
env_logger = "0.11"

[[bin]]
name = "workFlow"
path = "src/bin/xun_mcp.rs"

[[bin]]
name = "workflow-ui"
path = "src/main.rs"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
